# TDCT

TDCT/: CMakeLists.txt  README.md
TDCT/src/: delta.cpp  delta.h  des.cpp  des.h  event.cpp  event.h  io.cpp  io.h  main.cpp  spec.cpp  spec.h  tds.cpp  tds.h  transition.cpp  transition.h
TDCT_v2/: README.md
TDCT_v2/src/: delta.cpp  delta.h  des.h  event.cpp  event.h  io.cpp  io.h  main.cpp  spec.cpp  spec.h  tds.cpp  tds.h  transition.h
